fix blog post spacing

--- a/src/components/PagePreview/index.css
+++ b/src/components/PagePreview/index.css
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: column;
   max-width: 100%;
-  margin-left: 1rem;
-  margin-right: 1rem;
   margin-bottom: 2.5rem;
 }
 
