--- a/src/components/PagesList/index.css
+++ b/src/components/PagesList/index.css
@@ -6,3 +6,9 @@
   padding: 0;
   flex-wrap: wrap;
 }
+
+@media (min-width: 768px) {
+  .list {
+    justify-content: space-between;
+  }
+}
