--- a/src/layouts/Blog/index.css
+++ b/src/layouts/Blog/index.css
@@ -6,3 +6,7 @@
   min-height: 10vh;
   padding: 1rem 0;
 }
+
+.wrapper {
+  padding: 0 1rem;
+}
